	* Turning off "Show formatting on incoming messages" now ignores
	  formatting in <span> tags too
	* File transfer progress for transfers on MSN is now correctly displayed
	* You can set/change alias of buddies/chats by double-clicking on the
	  conversation tabs (Ma Xuan)
	* Fix IRC connection bug with dircproxy (xjoe)
	* Ctrl+[shift]+tab focuses the next most active tab (William Thompson)
	* Add a Google Talk item to the protocol list, to help users who think
	  we don't support Google Talk.  The item acts just like "XMPP".
	* Remember if the X server supports XScreenSaver, to avoid waking it
	  every 5 seconds.  (Arjan van de Ven with Intel Corporation)
	* Change our idle checking to poll only as necessary and raise the
	  unidle timeout from 5 seconds to 60 when using XScreenSaver.  This
	  and the XScreenSaver change will reduce Pidgin's effect on power
	  consumption when running with NO_HZ.  (Arjan van de Ven with Intel
	  Corporation)

	Finch:
	* Userlist in chat windows, which can be turned on or off using
	  "/users" command
	* Menus in the conversation windows
	* Improved tab completion support
	* Ctrl+c prompts with a dialog before exiting
	* Filter string in the debug window
	* Notify when you leave a chat
	* Work around an ncurses bug which appears when half of a multi-cell
	  character is covered by an upper-level window
	* New plugins are shown in bold text in the plugin dialog
	* Nicer HTML screendumps

version 2.0.0 (5/3/2007):
	* The project has new names - libpurple for the core, Pidgin for the
	  GTK+ UI and Finch for the ncurses based console UI (AOL LLC)

	Build Changes:
	* With the Core/UI split complete, it is now possible to build
	  libpurple without any UIs, creating a library upon which other
	  UIs may be constructed
	* A new ncurses-based console UI called Finch is now available
	  (Sadrul Habib Chowdhury, Google Summer of Code)
	* Reorganized the source tree to split apart the code for the UI
	  changes and libpurple targets