@@ -45,6 +45,7 @@ version 2.0.1 (??/??/????):
 	  conversation tabs (Ma Xuan)
 	* Fix IRC connection bug with dircproxy (xjoe)
 	* Ctrl+[shift]+tab focuses the next most active tab (William Thompson)
+	* Fix Open Hotmail Inbox for MSN to work more reliably
 	* Add a Google Talk item to the protocol list, to help users who think
 	  we don't support Google Talk.  The item acts just like "XMPP".
 	* Remember if the X server supports XScreenSaver, to avoid waking it
@@ -54,6 +55,7 @@ version 2.0.1 (??/??/????):
 	  and the XScreenSaver change will reduce Pidgin's effect on power
 	  consumption when running with NO_HZ.  (Arjan van de Ven with Intel
 	  Corporation)
+	* Conversation -> Save As will now use aliases.
 
 	Finch:
 	* Userlist in chat windows, which can be turned on or off using
